--- a/request-reply/Pipfile
+++ b/request-reply/Pipfile
@@ -6,7 +6,7 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-pika = "==0.11.2"
+pika = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.9.13"
